update sops keys and rotate all secrets

--- a/archive/apps/lemmy/db/secret.sops.yaml
+++ b/archive/apps/lemmy/db/secret.sops.yaml
@@ -5,25 +5,34 @@ metadata:
     namespace: social
 type: Opaque
 stringData:
-    postgres-password: ENC[AES256_GCM,data:5DTYV1xHuCJz4I/bFeypd3a8Rc87b8H1HvfcyZhEj3XUwaxIOJ9rCqIGCbWc6aeAygM=,iv:DmRv/zXRnsw/9jzMz8UV3Lnq1LWRctTQ5G6270j5UAc=,tag:IHl1miRgw/y96Y0JgjKaxQ==,type:str]
-    password: ENC[AES256_GCM,data:cPwAJnvTQdJBIaGEScfPLW4j5KcSD7Vnzoge8BDIUX2VWL/fN3ugK7KIAEtFbrUeahU=,iv:5yjG5rU328tYbE9YbIkpw3ThVx8/UHk3nnu2eAXp9Fs=,tag:dEyiN4IUXeeioEhRqBKi0w==,type:str]
+    postgres-password: ENC[AES256_GCM,data:rXoJSyuTR9Il9COWPn9lXxmgbAWgkxuES78eQVasWNr65p+ufKxcBXPqw9phvAXYQWk=,iv:6mI53IN+n60wo+4Et1nSrXeduJJzu/aan5djgfL+S4A=,tag:9L0+gZ2VODjSWo7Dx+EaLw==,type:str]
+    password: ENC[AES256_GCM,data:mKOK9Ozdphea/KzYlumfVvMe1syAGWo1JqAQiC8tTC6LDnecsD32zcilmyHobB9wgVk=,iv:bo60tX6H27Lz+uNXqyTqeQ6UDxVcRRHU15iT/yP1kjc=,tag:UpPCWiJctwKiQTAcxCVbSA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age:
-        - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
+        - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLKzFoVUFMY25maXhjdVAx
-            cVM5SURobXpHWkxoUEp4NTRtVDUzOWdKR0hzClhYclV6dU1FVkNvTTNCaTlhVWsv
-            MzlubktxL0dGZ2pqemJ5L0cwOHhONTQKLS0tIDFod3dMNXpnQ011VzE3V1M3b0lu
-            dkZzQkZHYTZNNzlQRjdmSEk0YldkNzAKQRpoNPKMuYCf8TazAKWQquo/APRQ1JbP
-            sVk5nuvf5027cL8hzz/ir1V66QjH3O+pEtqkI5M0KSyn8AtdqHqN1g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCbjdLeit4MHlCcXdDOTVw
+            R0s5S0JBeG9GaXhhZHpiL3B2SWlGdGkrRkRNCm4xVGRmUUZ4aGFyMHNqWVpKbWYw
+            NGFYSXlqMEZXdS9QM0llVkZFY0RjQkEKLS0tIGhGems3TlFEMFBXU3RQNWZSZFF4
+            VDJ3VXh3QnJkUnRhRXR4azJXWlR3L3cKMbePW/hOROfD5HVXatLFstuH0dqfUyt+
+            O22a73iDD+1dHhqRSdQ6JdW28tW6nJFVhOUOtLUDV5r+rViEqu2x7Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-11T21:23:10Z"
-    mac: ENC[AES256_GCM,data:AZve/zZVKRjCm1mvBGpHE/PZeCrBCfxqgfCtzL/lGgiMO6ZpuYvUd2T3zF6SP4YGNThvjYiAl2YVft8mssqt0grkqiSzgfwp/9MTtOdA4EV3yjMXxue2OCUKTSQer1C7eqplYLomXKOmF+UOVvBWg+ROmn67/bnGbT5Dt3Bg8aA=,iv:czNyoUvlkv48OAQrh/fkoKIH486Tk8B4PM5U6yeg26Q=,tag:fRwFCLr0zXIVWe69GAVsZQ==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGZkh4WVZYK1RzY215Y1hJ
+            MEF1TTgrSDNKSnBRRGRVTjlqUUQ0S1VNUjN3CkV3WW92U3FOSU5kVzNGOTgyTzFD
+            aW9xVVp2R2d1bDdKM2ZiSDZHeDRIM00KLS0tIE9hRVorMHd6RHcyNmhBamVHTkJa
+            UzNoY2ttanplWTErTWV6VEZnb0RLK3MKdqsxTlt4qL5by4VYUPvhQpFTqRbvIKjK
+            u4CwmWPxSLQwvjwR9KwR5AzinlKibfRahdEmkLbWlG5lrvmaBZRsxg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:57Z"
+    mac: ENC[AES256_GCM,data:W/vjOxHNuVpyNzRtmU8xNXFJyX5fqdESRyQK/SXEBOdJTMJXsPDejux5bBs+59dXKq7olFwyTwwkL8C51qo7foPcMoX3Gb4RmjR2NInwazgIBu39bTxOsCEwKmbecKlzaTlTRBiuDYEdlUwcemtb1AluaCBnqcvqy2x8Rei89mw=,iv:5Woavfg7II/HsVrqDrRA2qCIcwnSpNPZU53p3mOVETM=,tag:1ElLPya/6V4H2Hu3Q920lQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.9.0
