--- a/archive/apps/lemmy/pictrs/secret.sops.yaml
+++ b/archive/apps/lemmy/pictrs/secret.sops.yaml
@@ -5,24 +5,33 @@ metadata:
     namespace: social
 type: Opaque
 stringData:
-    PICTRS__API_KEY: ENC[AES256_GCM,data:KHMpu7de69HK01W8LcUYcXyGb6HbSNbzeeyIfEpf+S8/liXAwjdKULp0LIsogU2igBA=,iv:FGpMdXe08shH9NTPQU6bhVskv6ht8hwa4KHYVkOaWFg=,tag:jIumj+49n/JF/5vG59qZWQ==,type:str]
+    PICTRS__API_KEY: ENC[AES256_GCM,data:0Y0NrQzV/fQpAMSqc6ZJtGX/b+bevv0JzI9LrHsf/i1VDo99ZT8ISXIucy6EymtoXuM=,iv:pO7/4BX5lHYzagLJCIwMVXQQMt+Ct7sAA40jbjnRbZU=,tag:64ROS3OTqnIc32hOpWO53A==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age:
-        - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
+        - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBldEN5ZzNIak5OUkFKaWJr
-            dGovWWtJTUtWczlWdTNhdXdNRlBoeTdyREZZCmtJSkZvZTE2OFRpZ3crVWlmejFh
-            RTQ0YzlEU0hiWncrTnlNQlR6QzF4WjgKLS0tIE1JUXBsRFFBdkx2UEZQalZlZVU4
-            S1NnWjU2Q1h6ZDVadXNFUEoyMVovV1kKQqO+xEsUixIDDPD5xs7MpvRkSUtrGY/E
-            4hotfqVY5DJczedTb5Cc1xChf+m0VBULv3P8zW4qAupbl2d0R+QaGw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUNSsvM1doQjg2NGZSeDhR
+            cWt6ZmpZSjhURjB4SGYyU3V4SFpqbGtuY3pnClNhK2s0clZNK001WEpwRm5NcWxa
+            SVIvS01sNkkrT1hrTkFKcWh0dFlCV2cKLS0tIHlzbDVXR3J4aHQybEE0R2c5ek4y
+            Q24yOVhiQWdRckE2bDhkUmR5QlVCbUkKTFvr57Nz16CC/Kuzfj3EO1Kwp4N1HfzN
+            Cy/cZDIxJSPiBiF6/4mdyYCHlhWdqS1Z6bzN1COHWIOmr5cpNP05xw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-11T22:56:17Z"
-    mac: ENC[AES256_GCM,data:N+4JOubzAcnG19soeXbLuuFt4u3bD+X9an++SjRFutDj2xdTaTRqxKkNd9DqBjongR65JGUr4XH5uyf6ZYIHCQleILcK4m2phQ1mLedEl7D/qbfFLAQ4rB4FM44pp49jkTDXxUlRMeOPRf4eeuXxYJ4Xznh7uI2pzkuUzTLA32s=,iv:gSsGsfbA8BeZ4cjtiDOktWxUCVZH9t4uaxKrY7swZs0=,tag:NZYAKzUG2BbKyhL83xE3/Q==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNOWt3RlJsWHNObS9MT2xl
+            aEF5WGdEeDd5cm1vQW1WT0sxN1FtemNWaWdRCm1WZzBYa1NGUE0vSGR2TC92bW8r
+            S0xTb0F5UHlsRC9CcVA4SjhsRTlpQkUKLS0tIEpvb3IwSDNiYXIyRWtQdzNYZTN5
+            WDhuTWJrdzV3NUtZMTRLUHdOU0pNeDgKGsEXiAbWfTU3wm3ahB3DByBoUpaaxF16
+            v2wt7kynGyPisAgPP3zbFQN+dO5bIErg5Q2IXUlIW1P8xAytAy+8Jg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:57Z"
+    mac: ENC[AES256_GCM,data:8zaJuAmWJ0+c24DZk2ANGfjAZo+DLu4ldMXvee009VIxJvT8FKUrvTQliiRNKjeAznqzsA9kYR/WntS3ZT1DPpzUHZR25nyHrXjtoGtS/zn10nveq3vDwRZyVezVJ/AiaTukMENbtns1kapzBxzycszqixOluaNMC1lCcOJnJDI=,iv:54V6evZJ6X+Wm1M1EyBFTTfnBAq+kXHiNaFVJi+08a4=,tag:38mVTMk0xN25u0INOBkq+w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.9.0
