--- a/kubernetes/cluster0/apps/auth/openldap/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/auth/openldap/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     namespace: auth
 type: Opaque
 stringData:
-    LDAP_ADMIN_PASSWORD: ENC[AES256_GCM,data:KS9tHre6+cEAhEqCw52FiPKUHmqyOZHvfJrM5jOR,iv:n1U43s2nH8sJaW9gx6lsowQd1L+TJ6Q+7xsPoa1lXnI=,tag:BemzFvRzCmtIKaBdk4r72g==,type:str]
-    LDAP_CONFIG_PASSWORD: ENC[AES256_GCM,data:fy7JCgRq+YFCQEdd6Uqyum+uHHKhS70CiyRic2Vr,iv:GN91W143lPXt/UopajFJXMFX+ZFCDDY67f9AUf3rGMQ=,tag:beQVZMH5vBvKts3nOT5MTQ==,type:str]
+    LDAP_ADMIN_PASSWORD: ENC[AES256_GCM,data:RvXWpDZRwLm15Qjs/luR3bN7fAyrto8i0ofRvB/J,iv:rsGRFdtT7tYXHrOqAhSiRgfB9qEt5iBLor5J32c3pJ8=,tag:pwyZxB6reHPZConOYNelKA==,type:str]
+    LDAP_CONFIG_PASSWORD: ENC[AES256_GCM,data:AzwlAfa+8RMA+XJOWOWQhOqJHX/4KswIl0RCkLSe,iv:+0D1YNxRXgP3eqE/iXqJL7eNlIz0OW9tDlQmHpQ9cME=,tag:SUTBVbm2ohAYELtP/Ww/tA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4S0Fnc0F5dERWRnVHTC9w
-            UmN2SklaV0Jucmc3cUZ1djZSKzljcWM3QWkwCkhiaDZsbWJSckwvR1RjSllsZ1Zk
-            NE1vSTRrdk16YTBReVJ4cjVxUUJWVVUKLS0tIFBqeU1FbmphejhHUUMxNkhRdU1O
-            ZzVWMi9FbUlCMGNOSGJXZzN1UkYvNDAKfLaT6SnM4o4QYkAUi2i9Jr8O1sPN/OMs
-            Bgiju5FWVHyWe6tPGre3wlnHLTUBwxGl4LDX+ul0hUMZWEaRcLtf3A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDWFF1a3ZWTkNyTFJrRVJQ
+            MG9yN2lkbU5sSDdQRFY4Wlg1ODRYOVBkV1djCmJrMzhhcEM3ZUw5NzZJNE9rbklF
+            dk1Fa3lBOENWKy84NHhFQkRtU3VMTEkKLS0tIFpONitpTW1vNUtzMWFuYmVPS0Q5
+            RDJuYUtlRmZkVkFMNWlHYkpkTE9zeHcKKslaJsp0OrcLuMQ/0uIYW9Pj/HAmamSC
+            RueyMvy8ArtKWGDpHFhnpweQke2dkk5dIx/TKH6XtL3FbtJnE7PJJQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-28T17:57:38Z"
-    mac: ENC[AES256_GCM,data:7SgpNgEntjwi28MVNLtaCvEGgenbFpF4xLhoXc1kTW8fayDK9OjfED3zUPDlw87GJ8IOgaO7qRWmb1NE8JjyEqmY+mnY/iB7TuJkXX0gFVN4Vg60VxFpTTQHBbiKi9wKVk2KanB1/STGcrT+WdmdW2rkyXuDlUxvZg+oJZQtIjc=,iv:m+D8BRIgdcTyHr5X1Iw/Py4VuTflH4ZDjWmIUUe5AAU=,tag:f7JP8LvVFCFVOJGBLlzFkg==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4TEt4T2NrTnorZmhQZkln
+            bHJmaG85V2VHa1luTEIrS3gzRTJGM3lkTlNBCjFVVFhVTmxrWmZSWXMxNVIydS9C
+            dnJwRWFNS0JZSzNrb1JPQjNlZmJ6NXcKLS0tIDNRZmZjOFh5cW92Q3dwQWRKUWpD
+            STJjUDhJU3Z0bnpaUzA2QzYzTDNxMFUK1o9Jd2YjAQck+nBWHRoHYok1pRjfPlGV
+            D01fX/XhxAa/MAukmqARTVrgDOKATxpHv3DAoZGf5ARcGnMqR4vDnA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:57Z"
+    mac: ENC[AES256_GCM,data:3jIwPUfUqLT/XcsZvDiEt1z0vAL60KNyAE99e0y+VhJIn8/+OTlHKbCanYfcNzd96ncIWxo2duKWnCsq7S+USUiFgDsTkucdP9ko6oWlhWp8Wtomu3hYVhw+yWjTGNXXWDjgXZa50W1UswL8FbRp0IiN8Nfc7fDzc5sgfwrCaX8=,iv:7LPekEV3ePhy2IYhTk27oFvrgtLoBc8t4th89swNn2Q=,tag:D6JeESJYSElZmssvibed5w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.0
+    version: 3.9.0
