--- a/kubernetes/cluster0/apps/auth/postgresql/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/auth/postgresql/app/secret.sops.yaml
@@ -6,8 +6,8 @@ metadata:
 type: Opaque
 # aparently needs both of these passwords
 stringData:
-    postgres-password: ENC[AES256_GCM,data:Vxvpwxhm1vOT35Ij9vi6iZ2CYhXxnwHL4e8rfHsa,iv:Yib831xOSlfPCiqJCdrmK8t4BORWOpwT375ss8Ju9ac=,tag:Dhe8XzPENyBOipcKC9wKVA==,type:str]
-    password: ENC[AES256_GCM,data:ySaJYCs5s/cxGNFNU9CyQCMFJzQPrJblmEWETyjT,iv:OH0gRss6vmS0ln3wyS6ilwhgwmVWPZnEKvMWIUxS72E=,tag:zhKDEndrrOwZ52A7pgvA4A==,type:str]
+    postgres-password: ENC[AES256_GCM,data:5iIBkzxhDpMGkdBhKxIVlWMEafOx7tOmilLW+SjV,iv:SfuLGQeHl5bdNjtpEilJKBxFeSRIyfMtnuWMcqN+CWE=,tag:bt4YRcqZhs03KB1vtBv/zA==,type:str]
+    password: ENC[AES256_GCM,data:Ky0YXsOS0AhuqAG6nLkYvWjkxRH69dE4vKWHbGhz,iv:hWe58ME9UQVhlKtIB1uxcGZyK9xxEiZaw0kWdOUdBWs=,tag:hzLMqge0c2/gaxeaAW+UMg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBidWFpZFVraUNUbSs0b0dW
-            Qjd0eC8zVGllWjF3S21QOHhNdjFZOGI4ZURZClVzQy9pYTdZQ3g1bjlmaHBZZzJW
-            RXlpYUViVGVqSmRBcDY3WThqaURSdGMKLS0tIHEzMHdKMzl3azBxSnFoMUFIT1lJ
-            NUE0SWRpenFiaFd4YVd1MEwvVlIyVkkKcSzVNhP28GWOaGhB7meznPjRsCOXAuKz
-            foxfJkqvylI4Pg7psNTk+w+jJzUB5lZvkY081FHv+Fduo4XLghXIMg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3Q1lXYnM3TS90SzdtdkIz
+            QkVZYXFvZkRKWXhwQkIwelJnTUgra3I5c2hNCmhkUnQzb1JkTjU2S0lHUFdDc2Zr
+            OHRsMEowaVJqRzN2cWc4c1B6aHFFU2cKLS0tIC95cUt3dUd3dytBOVVwRm9MWlh2
+            TW5qV1doOGxyd2VocjN0bmw2ayt3RkEK1ZaQjJszdQYeGwRakMduUvINtqmmnhXA
+            ajSVDIAV9z9shQ8FOLPHL8IAiXqb8jcNq7H2XN/rnnzYIgsARWGCkA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-28T17:57:47Z"
-    mac: ENC[AES256_GCM,data:TKfxK6ZcWATAeHXNfZZOSu/LdnQyLEiX1HYnckDtNglFj6eGI5DDZj2X2uLZlm3CP6lhUTC6+RvRz8jRJ03mBWFdpPTAczR7UlQ/nnJewVcMIW1EOXihEVONqkgioRRao/ZQ3deik2TFL4xyjIhXuovg2FTeqWK3yR0REbNy0aw=,iv:5nsG5/aZXSLAC/6HYofnW1R4V3xFfoeDorxwi7tXKLk=,tag:+ZE7RoYEvU0c79hAINJGjQ==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvTkkyR3NmdjR3TGVqNmQr
+            NVp5eEhhRG0veXhkMS81QjdlY3lsMzVWTG40CncveWZFcEZHUm5nTDNYMUF3VXNi
+            b2g1enl5TnFwLzhmdkRibVpPUC8vVmsKLS0tIFlqWlFOaUdiajhsdDlxY09kWktD
+            VWpwQkF0aytuSzY5MG1rNHMva1prZ2cKeYPesm/nCixsA7OaGHajz9qeYoezg+Wv
+            Moq0Mwc9fDgOn4imAOhZRhGuVGrxDPD+Oc9yzc/6IFtjlReTASg5KA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:57Z"
+    mac: ENC[AES256_GCM,data:honGDcEQLjNRW1IhNh/OHA+OAC6I6xTkA33uQ5aboJzCt6HiNFzAGQjRo/aou02d/0c3MMqQanNgcNGBlf2aS39pYbbFCKA9WAl9s25QTV6Ho+CZ0kIy0z9Ob40hQzmayGjQrWXTWfHonGlQp2+6GGYY+ghyKSoS8tL7sE5inig=,iv:atvyZmyq4I8wEtMSjCuxgnoSVeHPxRIg3rFoIL3SrAE=,tag:eg+tIZ1GrSW6jd/zprCCmQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.0
+    version: 3.9.0
