--- a/kubernetes/cluster0/apps/cert-manager/cert-manager/issuers/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/cert-manager/cert-manager/issuers/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: cert-manager
 type: Opaque
 stringData:
-    cloudflare-token: ENC[AES256_GCM,data:tpC31Bo+WORPgyT6XsIgaFj7f7rs3EnjPb2fRgIeBlaxWoUn9aSPYQ==,iv:t99n6f/NkcaaM5hvfSHs0eUmS0YYNQTM4wFZhGZcVmA=,tag:UXdY/qEbDyHKy8/WvUQ0Ww==,type:str]
+    cloudflare-token: ENC[AES256_GCM,data:SJ+Q9iBL48bNgiLKRMlgD6Au1Mlz3GmQctu46qL2OGL/Z03ysvkP5g==,iv:g4UHa8NdwYL9i1ThEXfQCRs6JCpdUgrrGccckmEsrBA=,tag:cQCUDcR1eIC3wOkIaGNw9A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHRUh3dGJhNGtObEJKK3pB
-            cUlFbGJIaE40ZnRJaVc2SFdhcmRWU1BxZVV3CkxtZVhyQ3hQL1Y0WmRINTBHZlV5
-            OHlmV2ZETjBiTklZSmZOcmtKbWdhZmcKLS0tIHc0b3RkalQ5Tm4rVWxrWGdFVmhV
-            UjREeGFBajU4c0dDenNrdTVmOW5xa0kKrkpiY201GrZEKxPXwbqja0OKSFVaWWgb
-            UKPzpCw32LyIzQaN/R6XJiibbKekMUUPhPIrwRqKDxyKCXLmesNFHw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKYTZvOUdJMzNQb09xRTVJ
+            ckdMVHBLYUpqbVcycjhGODhPbm5HTnIyTmpBCmJPaTlCUDZuV1pHVEMvdis5OGhX
+            U0RDb1ZTalhUbDVQNnV3QUxtb1FGZXMKLS0tIFprVHE2TEVadWhWTG9RdVdZcXRS
+            dE95NDFrYjhGRVNlNkF3U1l2WVdITmMKuMJABftTP0En1+wmfxKk8/pxhNKR6/1e
+            x5FsTvnv9XMHmMWjmaFac0lVrpCxFhO/RrOanoROY7qaHLuGFcryoA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-28T03:43:13Z"
-    mac: ENC[AES256_GCM,data:grr/lk+X9q4l3ZUqIdBuVrDlKWtWGjGyyvVPrJaVofxm8QdwzclzxPGOY87I01ET4AqFk9EQf+ymd1gzEm0RUIBAj1gHOTNit+TIGs1fG+HyRVN56yPN8T29HHSvezepda3UWWVNtfy/Le406mqLxXwMUzZH4oLEBVz5kMu9d+Y=,iv:9xam0IBJIUwYjt5Aw9sDIx+6NNeDM9qziDTX7d7XJvo=,tag:+B+Adii60O3bLnnQJJzRRQ==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBId2FXcUhkRVFLN3NuNDI3
+            cGFIRjlPT0ZYYzVva0lWb24zd0VNS3ZkS3hnCk1DclBmVjNwS0srRmVkK0xueU1I
+            N3BZNVJHemROY3NXNmNUMkh6elBZR2MKLS0tIFA4YktsR1A0bW1JVEhTcElBY3FH
+            eFFadXZEQW9OYmVpSFdTUzUzNW1TZXcKslzkaz018uZaaOZj0t6ZhhlnuACfkIol
+            pNvsfzZp7VqsA0Gun8U4e1Qjur0sJKHT3yieFbiePr1CTlo6OeFXag==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:57Z"
+    mac: ENC[AES256_GCM,data:27a1voK1VeLfMa1PtGv0GD7i6EqlmPVvQyD4J1PrCvSf194o7tN1ML9yh8XxbO4AfcH3/ogvoq5C98JH3twLv21LCkT+iE9S67pO3qmSAo+yoPsmqcFNdhdQJfF6/l1jESv5rTH4gaskuHgcUQ5wCafHgWLRQ3xmt27jj5s6110=,iv:RuQcEtCaHuQuCSyDEYKAOgrOQxxvvL4U2bAbqIlDU7s=,tag:slrHmhtqRiTg+ns+gordZA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.0
+    version: 3.9.0
