--- a/kubernetes/cluster0/apps/home/home-assistant/db/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/home/home-assistant/db/secret.sops.yaml
@@ -6,8 +6,8 @@ metadata:
 type: Opaque
 # seems to need both keys, idk why...
 stringData:
-    password: ENC[AES256_GCM,data:ezKkjZg6cqS5y8MU2kMHQFmWkGNYJ1iuxo6z/RGOgvo5LBMzFMIvxMIeVwlijoaBvcg=,iv:zPnCEL6ZYEYUHhUUHqAUetmoCVP63i2UaVq4k3MUneU=,tag:ragWEsNt5abFH+Y2kXgSwA==,type:str]
-    postgres-password: ENC[AES256_GCM,data:52a+MoKgtn59ZnBj3hMRDl1gr3LKGff/8PpaNEDOLlHctlAHgpycDZimBerOnXdEWbQ=,iv:reg2wZWvxffRmZLj0sbv8CXM47S17vbXCHZp4m9T6v0=,tag:Guv3HEiMXsPzBOGHHnQNZw==,type:str]
+    password: ENC[AES256_GCM,data:gmAd1uoHyO/CUtLnzaxraL3ilASQ0VtDPpaMsymHmRD7Q+M/1vJjuMlzwwO7UmW8R3E=,iv:kFv/jV1OpryFSWPOkWm6mCeZh9rKx5GAg53ppeGmPyA=,tag:K+Sx+HYJ6xf6PTihXSbmJg==,type:str]
+    postgres-password: ENC[AES256_GCM,data:1SGk2qoKoX71uJJZopledFVwTI31DZp11n+7pNlOVv1vrKJLXEBvodFYhQw/kh+sYgw=,iv:nzk+k6ErMdLta49EXBV8I25JIW8TtYzSFdH6S9E42kE=,tag:29SsdE04ySXierF8GKPNZQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHclhDTjRzOE82ZWxhNUtE
-            M2RDczFUaE5nQUJxUnc1Q3p1c1pmMEdzTWpBCiszTllyY0g2STRqRjhxdjNQWVZ3
-            eG5hUG1RTnAvQUJGM3hyT0ZhK09ReHMKLS0tIEVnNER3dW9nMlN6T2FuUWxhRFVm
-            Y0I2STV6bis0Nkw0VEo3UXR0aU9kamcK4VElThqsd9Me7YRHwN2wli6gUu14qZ+k
-            V3tHxsr/IYPiqlBqqnjX4IDvy8krhRBf8AhFDUONBdB7j6yVE5dxLg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBON1dmTitrOCttUFZnYUov
+            TUc1cDFqVW0vTDN0Vm9qR3hiRVYvVXdFckdVCkRBbHN5Z2ltd0dENzZwRVpsUnpS
+            YUlOSm4rZEp5aGtjYzFmNnNiOVdJZkkKLS0tICtDMlM1aFJacWpKYjcydkFJMmta
+            MDFTaUZJM0FnNXloOXV3V1IwWU1MT2MKw+7XOdLdjmBtFi0g6l49xdA7rhcxu4Zj
+            mxHXuMm3hhUTeAN/muT8qCjfbbHz1ZDMxktdFpZZGZ4WGKdjRlWPbA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-28T23:27:42Z"
-    mac: ENC[AES256_GCM,data:BzOSR8DV1wG4T4469myJDPk3a9t3q8Shc/FiQZ2gQW99AjEfa2TEsyjpQ4SJiCD6G7kh1dcmRE8/4sf7OwHBKMWLgB6x0tydM5W3qqLAvg1x1O/KmOEZQDgCZi/L7p7wO+vXDPsnKlKjC3Pj1BJA2/bNRQkMkVpp1/lg9pX1DTM=,iv:rhPMlWMc5TquGhGRXay6GvThpesugueuf9Q8qaiUSNU=,tag:t3H9OzZYyzGwB6sP2PgfzA==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1c1BIaXh1SjQzOERIdVdG
+            V2UyK0tRcGJuYTdaVkFSRkFBeGVRalRLU0dRClc4eVIvZVVjMnRzMVBwVk1NVVpa
+            Yllkc3RKOEFFdW05cm5OTFZLTEk1elUKLS0tIHpTRVIwUGFDd2NrcXJGN0N5aGpO
+            OURmY2FzU3ltaVRnVGErZnN6Ums5VFkK94tJKmk8bgQ3533oSjT2VB8UeZzjxRYP
+            r1TpHf9TrTqJeH1PNFDKSy6sOnDDYbT6lHR+27YuJ8vYiEWIFx/CXg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:57Z"
+    mac: ENC[AES256_GCM,data:dhv5WfgOLEn5EHu8QonERe3h+UWga/9AgrDPulw6V6LUmN6xSTuJsKI4X2g2voPZ+tBpJ3V5c79oAa2f302EwRyziWgpKzEpwb/sZoMDSMmgUaZUGZ1+xo+KIUHhYsy4xDupcAdTd9NrXP6klmwWfvrKohqxL3BGD4btSxKeLhs=,iv:6rmgN+LOx0Ufvw0cqclIijljAiBmxTEDFtdSwnB3Xcs=,tag:YSB9QgZXflmG6mpQERoyLQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.0
+    version: 3.9.0
