--- a/kubernetes/cluster0/apps/home/immich/shared/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/home/immich/shared/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     namespace: home
 type: Opaque
 stringData:
-    DB_PASSWORD: ENC[AES256_GCM,data:blM+KsLcl+Sh0At8cHDx1Xy3Ul1VHerkFPaY6Bi1Eyt0mNxXUTNTdhhYK7btPHyBATk=,iv:xQiREaNH8/ZgR42clkSs948yKiDMSyxqYhEe0WLoWNc=,tag:artXbZHAnnWNEy50HU5JyA==,type:str]
-    REDIS_PASSWORD: ENC[AES256_GCM,data:FySZVjX+hej5p5yYndk00uijfYQQPiKsenMD3yfORGoKst7n0FZoZRsyp4djzvC9CEw=,iv:dvVv7y2urxNn+grLY5ONhzI5rQ+J9lxrK1e8S5MaAag=,tag:Ft1RC1WoXxin9c+Kujhbuw==,type:str]
+    DB_PASSWORD: ENC[AES256_GCM,data:iQcxp6OPXyYcpJmEB58K6IBYkYpQnmiK8r9hoe+LaPLzkqK4Q+uTUbnJOvTyOlZWKjE=,iv:QpCg4neiNlr+7NOILl+4EsoZDfxPFcJEbqBK+q3gFms=,tag:NJRQBSTa5np7rnx2lF5iEA==,type:str]
+    REDIS_PASSWORD: ENC[AES256_GCM,data:9XJtFwj++G6qy0cuDExsxf6hoK06QvmcSKCkg7Jot1zagK05ZTz6q9GJVVRXMqml5Nk=,iv:pnDhTXl4MR4irjlSbYzUdYrjbJQUc10Mg/YEvJZ/o5Y=,tag:cF+EjhhUBc3/XEZv5WAEbA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiVXAvVzJaUkFqUTBYUFpN
-            UXJZRDMrMjdHRVU2SGdwaGJiNitLdTFzclNnCkRHUGlLSkZHZVhHTlo2UUJUNFV4
-            ZzBCd0R0QzdxdnB6RXcvWU80enNpWHMKLS0tIHFjYk5qeHM4b1M4dmZ3eVQ5cWJJ
-            WURYM0xOUDdIdVQydGJoZEczNlRZSGcKn9T0v3SQMTglfDodYVlN7asKXRfOSseT
-            N/TR0GSrV52Llu/DBdjb0R3n06ztVr/9RCwWzYksLHzODcT2UzaLMw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3NHd4dkFMeGg4VmpJSk1a
+            dkdqWDBZU1dmbi91TGU5YndmUTgyK3BHZlJvCnFNaXE4U1ZsL0dNV3Q3YXgvZmcx
+            UkFBQjQ4SUxrYVNuUVVNc0Myc2VGcGcKLS0tIDJBWWNCU01URWRKV0VBNFFFRGgz
+            cU5IVkxqV1ZXOTEzOUQzVUhOcVJ6ZmsKx9WBRoP4XCz3Xwd/ZXjJ7dtwLZZk2iX3
+            kqCFEOIVaIKDrN76rRmOfRBUF+dtyqYipbMMzrv0ggNlvUJk1Z4D2A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-25T20:34:52Z"
-    mac: ENC[AES256_GCM,data:+eshpveKCWIzv5SoAh+xBquxvJIeB4zqf6v6dEB55czGnWCjULndE9iUTPpLHRC7LcNOnzDfEs6lvYo9s0ll5gLI0Ko4MpsZmX/+PQNmQhYgvWa5BBi247bJDxvYxjwwC4hwFnnWEWrEc14PElBUDebW95cCzXiLEqJi5BZmC28=,iv:1waVOcshgnV76jVTzhAJ0xjleIpIE5t4NIAaKxVSoRk=,tag:XXxieJ8fD5VhoYU76fEgeg==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEUEZKLzlTTnlDb3drb1k4
+            cFhjTFJUS0dmWUFSOG5YM2JUSkpKUXlidkdjCkcxemxCY0hyWS9WVUxtMW1DdEVw
+            ZlVhendRZFpacDVoenZUZlN0TDRrZWsKLS0tIEFReWhFM2pBMTFLbXUydVlqaFJZ
+            eHFrMXByMXRSUE5kVDRhMW04WUVnVWsK7QN8WKZA/mBkdQsYEJg/xaaB+Q6Q1Ngo
+            Lpn05lsfiuKaVu6QzvLw647Dl8UwDK4CRBfcSqfX+R3IfoYlNNmL/A==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:58Z"
+    mac: ENC[AES256_GCM,data:xy97wpK9Tvyzm36lcM8+391O5Ooe+JWhKXhH6wvXcFuzuMOqDFq0AhV4C3v9Sm99Br6YxZgZF7vAAVg94pphODaN02Ssl6eU0CuH9qznhRhRJVKoOWdM/vJl8yHL6srb1nZ24NBBxvUotYz2yBujNNRfPpVFGgJKbkztGhkP9K4=,iv:X5GqqYotRQ4yF6XtUNu1BxCbR8XekpmFuxjKY3Y9O7I=,tag:P9FpYoLTW2Ih+1Rpl9GiKg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
+    version: 3.9.0
