--- a/kubernetes/cluster0/apps/media/qbittorrent/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/media/qbittorrent/app/secret.sops.yaml
@@ -5,10 +5,10 @@ metadata:
     namespace: media
 type: Opaque
 stringData:
-    VPN_SERVICE_PROVIDER: ENC[AES256_GCM,data:pR3rmdNKOw==,iv:UOaS22OlwklWrlymllzA/CMuJ+bSqWKflcmmc2PiKgU=,tag:lY0h+uRY1K0vcXoVUEUeZg==,type:str]
-    OPENVPN_USER: ENC[AES256_GCM,data:2HsdbyA+xgp7wmRKJR5rRfmo4j596Buc,iv:aUNtGsTQiz0+dz8VbIQvhQpiFQm/y5uRBravSw7+kbQ=,tag:Ue7s4smaIir5hf8IvysBqg==,type:str]
-    OPENVPN_PASSWORD: ENC[AES256_GCM,data:k7exlhdZRX62znQIJ26OvtMneh5Zn4ue,iv:aG+h3oyCqgoTsw88/G2Djqm2bp5b87fiHlQlJjZX3cE=,tag:YvHIBqF7ynvvmDgfRh2KVw==,type:str]
-    SERVER_REGIONS: ENC[AES256_GCM,data:jZ0Qwv4AxCdgS1g=,iv:AXeCjNgAmWLQu720sHaHzFRWCE3TQQ0utuQyhlw0Lts=,tag:wmpUQqq9CvMcq3lhEQyEXA==,type:str]
+    VPN_SERVICE_PROVIDER: ENC[AES256_GCM,data:m28uz31eoQ==,iv:ZjwwCsnTqWKhH+bzOWqOay2O9LJzsnb0642CvBziITs=,tag:nzX3SAyub+ZCxKi2QloVNQ==,type:str]
+    OPENVPN_USER: ENC[AES256_GCM,data:Vgsj3Ca/72QfCdskiTQWZ5jtV1TLPPI9,iv:/ujSDU/u4pW40fQdHbILAM/9qv19Yjtd22UQcMedEo8=,tag:xPoJh57f7V+8BtIty8MuXQ==,type:str]
+    OPENVPN_PASSWORD: ENC[AES256_GCM,data:ky2wrbIuigIAF9LL+X782zUZTPc7eksO,iv:dFRQYjICxt7ZMw6ycohtPaMwwBroiHgEEJkhSQ805bM=,tag:BEI+dq/+/NXUNZL/e67yMQ==,type:str]
+    SERVER_REGIONS: ENC[AES256_GCM,data:fXRoo2ZoxYnW2qM=,iv:6FZj74wi2b6E2W6Fnr+xoUHjjp0WHN0RoGDubBsTWek=,tag:InRsS2J6lNkcV1drdj4Rgw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +18,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvMVhncncxd2tIdGlxNEFo
-            SkE3SkNoalQ5R0Nvek5tNDlKbWZ0TTFtbDEwCmhFZkpSZXduVGVkVExNeUZlSlQ2
-            bFFPblNkTlhGaGgrUWE1L2Q5KytFYjgKLS0tIGZhMm9rb1U0N2llckc5Y1V1cy95
-            eUE5MHRHVlpDYTRDU2RKOWFhRjRtRkUKkM+V+wTXTgotinjIlzaCr/DBPZAIWGiR
-            xtVVDf+8t7W7IokaFfptdxEAC2sAASUkSJinh6/MkSwlCJS1awsA3w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwNisycjhWMkpjT1hZOWs1
+            RmtFZElaakFKVGNZYnJsanhRekV0OVB0RFdVCk55M2ZicE9CNk1hVVEvL2hXekpr
+            emR0QnpYRWwydGhXSE1MamVnWUt2SmsKLS0tIGtVdVpsVkU2UXB0Qk95WFo0ZFdV
+            ajloNkh4bnd1R1FGNmRjcm50WkhIYzAKgwgO/Vw69Xb76fGp+NnUMyhnzIneJpp+
+            281y20dHgIgvxRSAk7E851Nof6wstcUzv9hme6yiC6sJR2tez0LMXw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-08T19:18:21Z"
-    mac: ENC[AES256_GCM,data:qnY7N6FpoF/zrVnSKngs8JVQZpXDLcTL8LDgyAKzTrN6WwUEJFbkAewwZAQhp88T6lgxC/NQDrGOC/1i+yTrKd/jmIh/Pts3MM81eff9ROdeF83Pr/awxpAynUB6Borbg8RLb7YtyD4bCyYOeGAsz0Y+pen/SpPNCKdZ4MgM6hQ=,iv:p0F4q+VRKfz+a8qEd7bqte9r9KJsxwkOgZEXwWrsA58=,tag:z5xf+6mjXm//hmzcc/6Adw==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEa1B6UkdjcGRQOHY4d0dr
+            cEdiRko3c1hWNVpNMWNGN095Mk5abnkxYkI4CkQrWUxjbzFRQURiS0I1MUdFWWYv
+            Uk1POTRsU2dqRFBvSFpMb3g0SlE3YWcKLS0tIHB1UTc5TTdQREZyMGJrZjluRjk1
+            Z3BDbk0vekd1YkR0TnJvWXY4dE1ON00KB+KVa76ZZjRaDsf56YWwDeX5sLFJ9LNj
+            rnCgM3lqR0/X6S3PtdttCbz+lsOCXKV/KwwdXIBW3gcWaGxc3Ez9mw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:58Z"
+    mac: ENC[AES256_GCM,data:Flbms03YWV3E382u4F3LC3X+hBiK+LUU0wfnS0hTWjS3fJ9M4ECtrB0nEz/r48yy2DbRIVhQnKWJTlPGwKqXVozbryjRRoqV9oyNmSIdfnZbXo4Qk8hpZ4p87x7Pk43hOTxHiC3p8NhftdIuvCf0frkj12beKvM2P6CyBTj2xXU=,iv:CFAXrkChdPW7KwFx9pNdTLiDkpWUw6jH9O4XgeWgrqw=,tag:x3QL2StqV+CKt8romp0Aiw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
+    version: 3.9.0
