--- a/kubernetes/cluster0/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/monitoring/grafana/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     namespace: monitoring
 type: Opaque
 stringData:
-    admin-user: ENC[AES256_GCM,data:F4mMtXc=,iv:QnsFegg6d8ysQ0LIKsjLmeLvBOGPyK+epj/+PiFobkY=,tag:/50qZS8p61K5772dtP+NZA==,type:str]
-    admin-password: ENC[AES256_GCM,data:UTk51rFqobo2oyWfhYN5xIc4W7Nf5To5aQHkEzEV0SeubWBsm+VqcQFjt/T4NPHGvZJG8RBHZTxS4GKG,iv:n0cPZMPnlyXhKmjQIjPNXlrTAbNpfs4U9Wzob/jTeYc=,tag:etew0zFq8lZRl9Y+dHebsA==,type:str]
+    admin-user: ENC[AES256_GCM,data:Cj53R8Y=,iv:ZztV3bAdPGd8R/4OM3ZoQaCR90RZJpppqcF4IQdJ/p4=,tag:EYDpEHSgoXuNCI9XYWRB8g==,type:str]
+    admin-password: ENC[AES256_GCM,data:56OT9rR8Mjmqf3KjRijv7aS01T5aanidrTTiDRPZfpKuNHZFcsMTvkzJDnqmsEjzROnQzB7gNNim3vEP,iv:HjsQwIMbiOenLPh0Y/pj+BGekU9gDAgkmn2xZuhoFJY=,tag:82dIzGfhIVlEI1sTCZrYNg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3NmFJU1FIcGlkY2lEYnFh
-            UEIrMkVRNnp2TzZ5clBOSjR3OHVYNktDWUZRClJvdm1COS9zT05Xa2FCa3MyaVV6
-            MUNrcStDczMzdmlkajl0Zk1RRkNWYWcKLS0tIEVUTE81bFc4NkV5STg4SkxEVCtk
-            VzZtZ2pNUVJESnRJb1JsdGRRaGh2U1kKXYPVwl28/nciL3wEHTiGcPIDxCYRV2Qb
-            3qJXmgVXD0v6dncAGtw55PRfifdMmtbDx/ZYDsh/JiTkCeBAXGTN7w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQOFpDOXVKWTFGWmRMbFN1
+            NzBVWDQ1THdlQ2Q2b0RodStFeVlOMXpybEJRClJqR0tBNWx0cW4zMmpTY2Q4bmR6
+            K1pKRzUrKzhTV3Z0UWljaWo4YlhjdTAKLS0tIFBQSlVkbGRkQ2g4UVAxekZYa0ty
+            Mkk2Mk5JaS9VVVdGdUNlaEpLN0ZET00KZIZfdDKgmGr1IeZ4zvKX0+esgFrhN1FF
+            LDrcFQLUjYDjsXbNkKHYm1BJCfXyyAxFmqWkV5AuwgChnegIUpn0DQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-29T01:21:41Z"
-    mac: ENC[AES256_GCM,data:geySYtaIN6yq/Zb0DVXnYZOGCz0LF6H85Fe1t2tzmMhU/jRa5R/Wz8Q/6h+fVNge9QFuGe3LzMxYbaIu2ZmwUYD1CZ+IoYtTLdj8tvafD/LclFQE1bQEF/fuXJrdUngOFgj0M7MWGjtce++qA8TKFmST5GO5DkFw90eHBBmW4x0=,iv:mByXQVUbzOsC3xg1Jp+vGTzPJhlijrqo7fT/iW07baY=,tag:+4yXeXN89zKeMZmPgn6bCw==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFN29qSTQ3a3dacWx0OEdJ
+            cVFiSFo0dnZCM0c3cm9IbFFDZWJSazZ2ZVFBCi9pOHVsYTFvK0g0UDFPcVNhN3ZD
+            d1d2a2lOV241UVZCWlhnUWxzVWZ3d0UKLS0tIG9EN25aTXJLT1lKSU9zbHNZN0lh
+            ZWJZMkllcXA4aTNYb2NldmlJcHd6cUUKSgx2Wx3uXSKIth1s2or23f7S5B1FBhSj
+            tk0uUMrQhDkW+U1QwxIL5MzT5bAvTD+ELowEH/Ii8VBW2JDcr81iMQ==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:58Z"
+    mac: ENC[AES256_GCM,data:BHYKBENEhjelJTmEfXV6pISZJcqTyNbFfRlITLtqT4k9nHf+0JzbBQo1T/7gzhGMzk0qn1ERiG0QSQJ4f73bJ+mNuFbpCG3KbAhO5V8CKER/VCAG5R52pa4Dvf/6vaDi8BEEuDGEOY0zl+EhORmy1hYCS99BCDInLZlW2zHmQsY=,iv:sjWEty/EBCpR8Fzg24iiC690yJjNje8/lIgnYiL/zfY=,tag:ctEYLNldSITLn4G75ckh3w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.0
+    version: 3.9.0
