--- a/kubernetes/cluster0/apps/networking/cloudflared/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/networking/cloudflared/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     name: cloudflared-secret
     namespace: networking
 stringData:
-    credentials.json: ENC[AES256_GCM,data:NLMn3yaH15BaiEgxhwa9haOKloqlw4kAwDlM+0V8SKrbS2S6stF0hEt9/BVSm3C0Js4cGCKHjRA0+0aqs2uGvlKDFzDmQUunOdqNboMngHQDwKOpx0J7pkpUquERJNcwGqO7jM/CrQvpmO+p6AfQdwzeD7leBzyZNMQHkuXcfiV5LSM1asCDOmrYs4cZ9ctK+HyZAGDavZoN0kx8rP0RmgxaPVHDTWMK/HG+OQU16w==,iv:eVMhbgNNMSZWGl73vRF0I79CgU9tRcCOfOgOXn/OcEs=,tag:W02SVF692bY71C9ZjVXKOw==,type:str]
-    TunnelID: ENC[AES256_GCM,data:AsxS35Mke51Ro4aT9UviErgR8d1K/VxsA+0LoH7UZQfsx9QJ,iv:+YSi+UUDZw2kuRqwCw7syUPpYsTLtlAgPYJpSlnMUAQ=,tag:2S8GSjpsAsPbKIK5B0Q6pg==,type:str]
+    credentials.json: ENC[AES256_GCM,data:w7UZUjeiKq26hYc5yt63Y6hr6hNfypXmRvX8ifOskEYuFEpA7O9N+4gX1v5vZINdlemDivbBO1V+twkhXIi22RWMonqsFnw1kqBbEcYnBcNBh0Tijp84aqDoF6dXGVURCndK1Vbku06b3pQKaiQsWMaZffiI7uwnvfUpVAngPSZbcTB7zeEaAxpjxo6b7SQ0Yi9+kos6+ScH1eLpAagtMPmN+TqFGRONZv4GYMYEuw==,iv:1WzVXOviNYGDAOcxyps+klhYGgjmg232o5JPw7xutv8=,tag:1VEPUX9vTOre+1YKQfmCBQ==,type:str]
+    TunnelID: ENC[AES256_GCM,data:wmyxo/7ciUCY1fZWQqlGHRxiujM78BByBDA5iKjiwbB0OVts,iv:QtNLqrxfPfhaOf5UdGIJZb5Sb9LJY7LQprMxgWmYlP8=,tag:2iBkWuBfNcaAyTo4qEtwtg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwejJNQVExb050NDlpL1ZK
-            WFVzdUVhVTBacVpDMFI1dmQranJiT1p6YjJJCnR1WXdQS1RuRi83MGthYzFCRi9k
-            RVcwUzdRSnZpSzM5STJ6NkVWS3ZTb3cKLS0tIGVSSzIvWE1hYXJYVUNsN0puWVFV
-            N2ZEV2duV3hSd0Nod2VMYXF6d2NFWmcK57OyxzgH4sb9SRli/0YS5pQlYFMW9Faq
-            d2nZ7vHiqUVK8nQmYYS5450w0SIZeKuFK+9nMhILpmD/NvdY8+b+1A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvdGsvRVJ1ZHdGRS9reG1O
+            QzVickJEMDI1Q28wNFN6R2J6Wm9mMTQrMzEwCkRrNERHRjlrUFBaT0F3am9wOUZk
+            TTJ5YlI5RkZOeWE5MElxY0hWdm9nL28KLS0tIHoxa3FFMEFvRjI0RFZnUE5vUEsx
+            Q2dIY2UwQjZ6bHl2eVFaRWtaa3hGdDQKjUJ1qzvKqkPs3SNDAFG2G5+qj8Yn+Udq
+            Aqjmn9mnkQXCoMi5l1QncSYCorzXuSaeTlt1o014e0NjBVFJfFANSw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-03T21:18:29Z"
-    mac: ENC[AES256_GCM,data:gJetDxAKu91M3T8l0TpM2wra3vBheZsNoV/WHt6WgjconUT2xo0YRRlR5BF08TWM3hJx1WEnclwfmMpu5Q3tp7roMEbHUl+zyLT2RdMdnEkkNBvLOP7+uipEAKiu9Qnceoc9dYPQnH1/+ivQnqwPPW/t8PBIIV7sM9CtJI4zMz8=,iv:swteOXm9S9fDn8KpdfWaYp2nFO3Yj2gvGB7KqFvemwo=,tag:WCTdmj6gKaTuxME07r3AQQ==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5QkUzT2lGcDBRUVlMYkY2
+            OENDc2hhVDNqV0ROdzZwRUlEelNEMThvTWxrCm5PNDEvNzk0V2xlRE5TN1ZUSmtW
+            VVZRNEpwbHAzNkFEYjZ0YmxVQkRyZmsKLS0tIHJoMTFEek1LbjZuWm43YnBhV09E
+            OEp0Vm4yZTlYeXpNN0IyOC94am1ZZjgKmYDkNXvpsY71OtWyeTnYb/NpRZGz0Ksz
+            9VzYaiVOQ/DJTfP1K1kIjn1/ofciUgBE/haD4xqRLOZAiZP5ofvqBw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:58Z"
+    mac: ENC[AES256_GCM,data:5N5D0CoN4xAlmk8fxFPMeifSbsFNjS+6oNotz6lSgnmzwYLUx3+Gww5RqIm5akzCtPs2HrCg++xgtPNmUS1UtGx+uLWjrg/s9FV1fUESsUJ3eeVVEvm7rulciCkeF1/lnNkRV0DReP3ct6w8Bi+6/tsYVQCfEyMH7j1uq5YYCZE=,iv:K3U8CWT6VXN04lKGoPdQ3a/jUxs/RNO4tzU4qzpl+b8=,tag:HgL9OKZxpvb9VgYcQvIq8w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
+    version: 3.9.0
