--- a/kubernetes/cluster0/apps/networking/external-dns/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/networking/external-dns/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     name: external-dns-cloud-credentials
     namespace: networking
 stringData:
-    email: ENC[AES256_GCM,data:V/HF7mfQPIzzUdOYYNnFPz88Vuo=,iv:FbPiEJhFxGG37sb15paGX+uh30Ps3e4GPK3naN+YPSY=,tag:iWIutSHxXt9ucYhawIk26g==,type:str]
-    api-key: ENC[AES256_GCM,data:oT/WRNBCUbNd21kzTJz3HQXv5udGtXdIiXUKrtS/FoGuZHG4Kg==,iv:BG+1QgGQemW6XOzXMhzqu2PAjrzBJJweu3UxGZJCOjE=,tag:wGyH9ntKiB9jOKNVyH36eg==,type:str]
+    email: ENC[AES256_GCM,data:GeTFGA2hQ3+D38GGhXCVOqErHNc=,iv:oG+ZUxSj2Dj3yCc0RJrZH2yjjvRar1x6f1NsXKO0Tsc=,tag:g9F4eiUV4CmSTpCgVesyJQ==,type:str]
+    api-key: ENC[AES256_GCM,data:Ev5xe34GDIx8fxmKDp496IeJRE5tSG8tzywXs+BSSjXzvTT1lA==,iv:DXDT0hySXdituEhkY5CorOSbj8YPMApl0nAhzHIDRJo=,tag:yeKD9KxM34hDPjXPLYNKyQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3bGU5cTRqZ1NWV05RRDBP
-            NkU5cTRWOFRwNTROUkhZeWFuTUJqcUNkTFVVCmxLUDRSbGFZVWFGeHF6ZmN2cU4z
-            ZW1aMnBCTVNmN1BROTkvOXVjMjJ3NEUKLS0tIGN5U2tXdEhDVkh0c3hrY1AwbTVs
-            R1NUMlZreWhRaWxaSDQ0NnM1RVYwUUUKaWVoPmJKXU6T9p5cpfrBsACSPpTQIotI
-            WGKk5zGnFHM9178GrJX1lfYNHnxucICdoHKoeLSAbf9tPIjSwqhyUA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsMWFtYnViTUFQTXlWWlFY
+            Uy9YMUtVY3JaV2h4amFzY3Nsbkw0TWx3Z1ZjCktTUk4yQ2gyRmU2NWg5SnRacDNv
+            d3Z4TGs0Q0lLSmtONXdaYjhXc1lUZ0kKLS0tIEVNb2pOTG5HSk1tVCs2ZFNZNmVV
+            RUN3d2t3VERlU0I1N3lqZDA2bmE4UE0KW9i8LZ8UP7MSS0sJ4h42rWxCfpGFiR93
+            SOHSHa9zNG4UcrVx3lnNgZiOiZM5iNUtMY7K9JQpyWVzrcU4zCJpWw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-28T18:09:42Z"
-    mac: ENC[AES256_GCM,data:dClVMQar4C2H8YADz8TuB/Wz+pIuRDUwGbitboipYaeU/jwrXsbM0N1VI7wxfZrHTAGa9wutCqeFVoekmq3AtcCYyc7BLtYgYX3sqFMnIvobpbXXZ0XtDHYtcTP94FEIgyngMObaj73mTDKynCzJdDVwh8cC5xeh1NH1bMwTgeY=,iv:S3SvyhdkFrd44k8t7pnaBxEq2bdm/hrfK/n8XpNT0Xc=,tag:h5kdad3ebrf8sfwaXa6ZDA==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0bXUvb1gzMXlldmU1Z3hn
+            VDBaL3kzSC9OSndsWHhMOHhxc2ZoelY2M0Y0CkhqbzZtRitzSHdobnl0ZEFaYi90
+            anhRU3pYRHlaRHEwbG5abXhXTEV1UlUKLS0tIFp5N05UUU1iZ0g3a3lyNWJSdFFm
+            R0NsZ2d3akpBRGlOdGkxQzRSU1JtV28K/MCwjnyhkwfd2CzTTW7w+DSL0u7zFqPr
+            r0gadJrODxihDHmDF6+OXiR1gQ/+s+W2UPTMuZBgFyE6yeCrK7ZsqA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:58Z"
+    mac: ENC[AES256_GCM,data:89FC+MMiQvz6losCPhoKB8xPblRysSsNeYw2V1CYDe4Eh8FFf+auF+wBj6XfCk29ijpFJ2JTZ1c32epSPdx8aFC1iGYPi6CiInJPydSEBXGwugGrjDeQHFb8EN90/p53V/zF1dMCUx2H6mn/5F9OWRdnv7U34EB0WL8r6S2WUWw=,iv:+/vnLHfLeC5vCg0Vil4MM4XPqPsZnkhKxr/m81EFC0A=,tag:CCb9kNfG94BiCJVDL2b0xg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.0
+    version: 3.9.0
