--- a/kubernetes/cluster0/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/cluster0/flux/vars/cluster-secrets.sops.yaml
@@ -5,15 +5,15 @@ metadata:
     namespace: flux-system
 type: Opaque
 stringData:
-    SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:PWkQ9hsrpZT7XtAUceDNng==,iv:JiPTQd5bsLMrXzt1SXklrS4bG4JgxjDNScz3pDIoSj8=,tag:jfji4UXILXUO7G6A9h6rvg==,type:str]
-    SECRET_PUBLIC_IP: ENC[AES256_GCM,data:YldF9/UvrS9qYxik,iv:8iffRUnoE7rGp/1Z6TulEc7xlWGXc2HaVgb7M66ymwE=,tag:cYrx8iNGxiasD08GqMlvVA==,type:str]
-    SECRET_ADMIN_EMAIL: ENC[AES256_GCM,data:3nciogd/g0my2sxJ4q39bPNY5O0=,iv:lgSrr9wpfLQnIoigaa9gIgGuZTPS4rEudn4q/aeBIOk=,tag:ikOojGJWXg+HQExjUR09vg==,type:str]
-    SECRET_NOTIFICATION_EMAIL: ENC[AES256_GCM,data:sAGpTaj1l4dtg20X3Y5kreUkodKuDvihafN1+YEQ,iv:LQN8TrsPJfUcBLKFXx+HjYMTwLucPmWrhZrOliDH1Rk=,tag:eAdM1jvJCFsuR7nHLfbR4g==,type:str]
-    SECRET_TEST_EMAIL: ENC[AES256_GCM,data:qriMlYpv3hDKovCsqSbNxzKfq02t,iv:RxWmoyhMu9f9aWP+sa6etYxhRVRPVaue9dZMk+Skgzk=,tag:bQpKS7bKgCn48NcuR4tPDQ==,type:str]
-    SECRET_PARTNER_EMAIL: ENC[AES256_GCM,data:/kzInyJ86w78zk5CK1O+Svis2yLB,iv:mxWk5Nk6vTOIR1U9NT+Gis+ww24hjufw/i38PmyEzc8=,tag:+IKUvfN/JuJ5a6yk1B/Fng==,type:str]
-    SECRET_LDAP_BASE_DN: ENC[AES256_GCM,data:GYmC4oYFqubqhwPPpEixAYw4/P4BeQ==,iv:pfeG2gTnChNcMwJ6o/AxpDIktTUVgmhf6LpxEKj83Ao=,tag:MPqFNQsQyekjfUqkMY9+Uw==,type:str]
-    SECRET_SMTP_HOST: ENC[AES256_GCM,data:peyFlB/lKAOLgAt0euCQy20ghAQ=,iv:Wmn6L8eqdU171X9D0xZlZ9F9Wyv/R8GuaI6GYxHEqWs=,tag:0mcxfROtHe8u/kZCgenqnQ==,type:str]
-    BLOCKY_REDIS_PASSWORD: ENC[AES256_GCM,data:UBl6GLdCMXu+8JgDrmPsPXc0i+LA0nwpSUahRPSwcJChjLu0c4FfJ84H4/nHGigFDCIXSldUTZr5LIxawBUyk1OBesN6VeDoEILL4b8TJ+G5BQXfM5EdIFHPlsBLrpk1tGVu2A==,iv:svoX93emc6ABWxvC/8aYpdsW7ZiDbhpARPsJ8qqPYqY=,tag:GaBe9xnSCRZDpZ1X7mZCpg==,type:str]
+    SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:LsnVLZ3sP/DPRq2LZtB54g==,iv:uHUiXy+ZBCIREWL1A+6JhvCOVkwe6fFbEpxEH3FzIkw=,tag:UuyLxCTLs2DTrd79IFt2ug==,type:str]
+    SECRET_PUBLIC_IP: ENC[AES256_GCM,data:2wnV6B1qeuCRSw2o,iv:lYYI1im7tciKQfCloAlgOaXJf6kUYiS2iXqffucMc0Y=,tag:y/ot+s1X7p5afYNwqMwy+Q==,type:str]
+    SECRET_ADMIN_EMAIL: ENC[AES256_GCM,data:4W77qlI2FP9m7h1oFz0FYB2c430=,iv:OTyjocUbI8QDAgCjmdEZN5jCc7xV8cr/MjiFbyQyDLY=,tag:q4NU6vib3K1r/XoQsn8gOA==,type:str]
+    SECRET_NOTIFICATION_EMAIL: ENC[AES256_GCM,data:XqTrB0zVxiCXE7Vh38NIQA2EGEMut9Qo/Ti13Sz/,iv:BWJ2bB+jE2t5JsrN6PFOrU8YEuh8ftH5/DhrYPPp02Y=,tag:KW78YeqWfoAxY+bH27pqGg==,type:str]
+    SECRET_TEST_EMAIL: ENC[AES256_GCM,data:Cp1VrtZRfHmWTyLQj/NDZXiIE9ES,iv:QfBeAHsJ38Tgch3ze70tYPVdijmDPTvq3a8quCBGDwQ=,tag:atQ31iRju0SHNLolFG5zYQ==,type:str]
+    SECRET_PARTNER_EMAIL: ENC[AES256_GCM,data:UYrQ+c2+9AhZDvKrPAlZ7zttipRL,iv:nzxe6G0S10djMqVTqZxJf2JK3au4W8fmfyO4Zr4/yrc=,tag:GQEgep+4wZFkcBBHs+enEg==,type:str]
+    SECRET_LDAP_BASE_DN: ENC[AES256_GCM,data:5J6XXl+cVtdpBrMtigmDAp9wX97hWQ==,iv:sklEDgI+6A9dy6XEhvY5+IScw0ZNAeNdjjYfh7jQE5g=,tag:H8Qr4Eu69RDz/UHQNs2qqw==,type:str]
+    SECRET_SMTP_HOST: ENC[AES256_GCM,data:xF+5uKYsTHkFLRuFIbxd3pzRxAY=,iv:n4QcK6jGMp1RW+hM7N+swWnve6HFcgQYGWS5+3RjMk0=,tag:RsJBjkmzTmWx8mtgHRl0SQ==,type:str]
+    BLOCKY_REDIS_PASSWORD: ENC[AES256_GCM,data:AVd2FuMPTeaksl9vLKcwG+t+krcZKxyBxgRBqyD9dcWM+T3rxLXB5GHGRW17XTDrLRTt1pL+8RpWwsLWlWdXps0Ar+ycizjUDy0I8XKBk/VT+o7+QYblohj+2kRfIFktHlf+mw==,iv:/tvR4/59hSgGYP/Rb+LeCnHRmTE/tBQRRFS0iKIL/uI=,tag:93pfiZd5hC2KWrztytAh3Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,14 +23,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoOFBhTnAvM01iMDl3RUo2
-            MHdoVkMyTnpTcXdsMWkxZTlBcUNLZXYzVXcwClpaRzhNRmx2ZUh3OTA0V2M3YVpj
-            alc2RVBLUSt1S0pSVnBQWHRSSjU3L0kKLS0tIGF0L2RQNTJqSXRKUTJTaER6b0VQ
-            TDFhbGZzNE53N0RXKys2c3dXVWVpNU0KfDXx2m38eG1BIDFm+lkcKpVvRagWRwM3
-            2N1zp+RIexXhRyjCni6ACpOUTGxaXS0aVSxEW5UGmiQupkoTeZ4b6A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTL2lLYzk4cmlIMm00YldV
+            L3BoR3orWVJHUHRjVXJVLzF6d3Ntdy8rZkc0CkZvRXM3dmV2SzE1QmlORmVCK3NM
+            OFZlUGNPNWhqRFJMdTYxS1phUlBGNEEKLS0tIHJQSkJKTndLb3pwQi9ibXBVU3RJ
+            b2ZFUWw2OXErbFM1VElSWEJHbjF3T1kKup1HA7Q68yWi+WbWobrzAUKM16xRrVV1
+            sngcuTNbA0hsIVXNVmnpiFtX3lQD1sAeSySe5LXxwTs5RWpBxrkKBA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-27T19:56:43Z"
-    mac: ENC[AES256_GCM,data:9xxRXW5/mG9b8WcfXp8k/IHWtEaK+EtAAkl/+p+wisQ7J5Kl95NR3A2Nz3CB+B6qwnybpgzVfmKNcMch273giKJymwbETPsY1Eb1SAQ1F4rSB8BAyRG+O7fG2hhxYSJljCWNVfa0LCN1KfCJ7p2wOabvLQfSjFdkKHW8XMSiWjU=,iv:ldTIw/fEwdWuIfjjW3NX4XqgCWcNM66ub4D6e2tzCP0=,tag:A0DrYBhbIfA8IXEEWjGOkA==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyL3U0TVRGLytNTG42YVhH
+            SFZENTE5aXY4emhwTyt6TTBSVktSRk5GeVFrClc5OTYzaFg4WG5sOHNNazRFUTBU
+            V05RakgwNFc1Qmdmcnd5R0NuTENsdFUKLS0tIENTc2k4NGMwQ3JQQk0wM3FIM2JQ
+            QllnTDF2endhYkFZMXRLN0ZPV3VUUlkK6R0gGpIuUlDOHuiDYJ2ueOJ+7wAo36QX
+            erz8GO8jt1Dl+R+J/kvLx5bkpzyElCF1u7DqUF1A7lU7mKLSp+VAJg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:58Z"
+    mac: ENC[AES256_GCM,data:u11469Pe1CIQ7wj5m2TBP8ctQnb2TalDXsCDbw7FN6Vs7IEIqsaUqrEa9P0vYD+T9D5jGVINKKQMd83D2lf/flVWvQfk93xQv++xYwrMXmFM7VRCig2+4x0R5/rbGN+Isg2NQoV64qrbCTc7JFVC8vpC5EO/bczEl/zYjmA4+zo=,iv:d3k2fBfPbpLbbfcqzB3YW9w8vQ8sXzzsBJTU2ikhq4c=,tag:n4mqgV7VBxt3PNAnBFx/Aw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.0
+    version: 3.9.0
