--- a/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
@@ -5,12 +5,12 @@ metadata:
     namespace: auth
 type: Opaque
 stringData:
-    AUTHELIA_IDENTITY_VALIDATION_RESET_PASSWORD_JWT_SECRET: ENC[AES256_GCM,data:FdVLB17eCe7CYkkDj/rlwOGgXmUC4E3iKq4rvnfPSbiT65yW8nKquESGwMdcN3CtehlHt1Z0FkpbCLwTi+B3qpxW/ay9J6w7jAY86pF1WdEifJoTqd5d8UPC,iv:9wigUhdYmhrT4lPCCutQhMKJAc0mSNdo9DAkH3eQnWA=,tag:C2rzxvu6OvSQLbmSRYvcBw==,type:str]
-    AUTHELIA_SESSION_SECRET: ENC[AES256_GCM,data:NIuEQEQKtxb5hhYOo21bvDIvvwm61hPVGOv4nMgd,iv:F5vcLDZV6HjlYfUUgKlqYfH5s97dSV+TCQb0GlzHpBM=,tag:DDEUgwGPRWfs6oJLd9TFxw==,type:str]
-    AUTHELIA_SESSION_REDIS_PASSWORD: ENC[AES256_GCM,data:OIKIrHf4YYI5zDPgSid0YvZrmcr5+dweuT8QgZ9r,iv:/TTUchDIi5aPDwF5BvHKz0gDRboyh9DRt/P0yV5+MZU=,tag:iDn5dSaJM3t7t72LujpFWg==,type:str]
-    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: ENC[AES256_GCM,data:r8M4G8+RyDfsQBIu9mHfnlgznvDqL4dNLkOFArfx,iv:ZLqoqT6/lfQCZFv4YZgA040eqMZwH7kzBDpbzvA/GAk=,tag:NrZFWnLUPef5/wpIJ+YpuQ==,type:str]
-    AUTHELIA_STORAGE_ENCRYPTION_KEY: ENC[AES256_GCM,data:wKCPOr6Me0BJB14ucIpnd6WSX0RrnCNutID13gEl,iv:GRL2CAFfdEOhlLeOTctbvTZHc4qyVnNzSIwzR4hj2zQ=,tag:4LDtcTOEsDLbEpymBXtp7g==,type:str]
-    AUTHELIA_STORAGE_POSTGRES_PASSWORD: ENC[AES256_GCM,data:4X/KQJkhjOfSi5wsGcERZ/+rCH7GBvWtn29UNqO0,iv:N6GLK6aHo087eTNsvh2icq1k60MKtrzrrZst2bXXYHA=,tag:LRhSyZMwNiYSc9JN56rXXw==,type:str]
+    AUTHELIA_IDENTITY_VALIDATION_RESET_PASSWORD_JWT_SECRET: ENC[AES256_GCM,data:QD0qAziUHu3vSC/oB3zS845py0ih1Az77/afOpeIP+1iIwXPKZlsxuB3oXzeJv2X4noptdqNUjD8fu4WicnK7eX+OyPovAOl5fv/77FrGD8pnIUy9n/RK3ph,iv:pcijShTb6Xyt9Ldf4j3WMjwDASjmjRGaEns/1cnkE9k=,tag:GMm8qSyNltYNoar09PoL9Q==,type:str]
+    AUTHELIA_SESSION_SECRET: ENC[AES256_GCM,data:zGhsMIFUdcZv1luICtJYb6+Mys02F89gfCHAGjjX,iv:n4rgSGmv+sTVFJ3YiQug+AYx6bvnVMqs44d0t1DSc3M=,tag:PPu5EEoIcqZVi87K50EJ2w==,type:str]
+    AUTHELIA_SESSION_REDIS_PASSWORD: ENC[AES256_GCM,data:LAjxRG7++QNxx2KsBQA97oVz7XkyEOxI7SxNFjkX,iv:VS0heQd+BKp+1gVt/RACI72VScY9dMAuqRJ+yJw/m5Y=,tag:vpTS63W108IDeJzEBTqHpw==,type:str]
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: ENC[AES256_GCM,data:jxYZZI7iSsZytwtbSAy+fr8WC3eqfLRAYJwGDWJ2,iv:2MkTAnsCM0mGBRBkzYPn7uY3bn1LYRDIruA3q0qDW18=,tag:nqzJ3Yyt3DivFNoRR72ZWA==,type:str]
+    AUTHELIA_STORAGE_ENCRYPTION_KEY: ENC[AES256_GCM,data:Q3FXTt3KMXfFjZ8XOJ5S+Ou+sTv13WG8Ft0jP2R+,iv:B4z8/ktjUNOUt80GCy4uhSAEgmUIiEpYJBE53GpjPQc=,tag:Ctm1xyGvJ4m5AiNEz7Zkkg==,type:str]
+    AUTHELIA_STORAGE_POSTGRES_PASSWORD: ENC[AES256_GCM,data:3BkbiBYBVzNSZci2VAzpcUTFPLpp1gt9v0+MsDBB,iv:BmcSGIYRC1eWHWcitATZzz0NRhfejR5clKGK1JT1t0c=,tag:OcoJpBkKEOMGu84AxnacKw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,14 +20,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUMFNMRHZ4TlU2VWNzWk9V
-            eDlJYWMxV0RIWGVzRzE3bUExTGM5QjNDUGprCklLNjFRYm5ZVUp4K0RZSVVkVG9k
-            OFd0ZXc0enU3QUlJYWxsQUhsR2Q4MkkKLS0tIEtYRlhlYnhWM0doRkRxbWp0SEhl
-            eVNsLzBQempKQVNxWjU3WDFqK1FxTGMKwHZxiWcdZ8/r5npAHw8GcVV6tMTTgpR7
-            buiCSYm4uXVXJsQDEaCC67MfFQCSpTxI3eNouGCIuTfHGGoSgv2GjA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtU29MSmF5U3hBQ2NzY1h2
+            aFFRN2pTc08zYnBlYUVydGFEbGVlMXhUbVJNCktRNDNwKzkrQzlhNjZVOEdTYU1V
+            cUZLVTRDbWdDdDgvdGJUclJxUndNaGMKLS0tIGZnaXluaThTakw4UU93RnB5NVdu
+            dTBtU29yR2l4dFVQV2lwcGQ0WVhjRzgKZXVmkU7WpJFnc58Jy3IDRhB7VogIiHa4
+            N9vGzltU0SohRCUa0Bo8Soy5o/ZpsSAWKgueyvZP6aU+HLy0ZG7dhw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-18T05:13:45Z"
-    mac: ENC[AES256_GCM,data:6c/7TMJ8XFlIVGdFKM/dk8l4Dr+3qQahYmeG8//rH1iQFMmnyi6Hkhi/PA8hFnzTqNqsTXbls7ApCDH887f4qN//a4gLiFQriHKfM37aWXFgL2G5ieGtlbSEB06qVFEikKqeKgxCV3DfFCFSLlfZvzBjr0BuQ+QCK73SqUZ68bs=,iv:SEY0rapygtvIWz5RMn/qaf9/8Fcxek7FqnQ6NHVHmx0=,tag:tNPWu7k1HylNp29eSB6DYw==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkUCtzYUFXMm8xN0IzaFpG
+            R0UzbEdwUmRVRktMMGU5UHJDR0FrR3lhMHh3CnBFN2Jnd1RJeFpzRUtxTit4WnVQ
+            SXBaT2c0REhEcnVhUW9FZGdFYm5nUVEKLS0tIHZwUWxTVlJnbGVlTjg2K0dJZjJX
+            enZ0Tm9id2lySWh4TjlSZTJRcWV4eEEKdLQgLaD/RRNiVmiIif7Vmw1fL2JelqUh
+            aniTJ1mPxeRTBwLhD7pq9SvGt0nVctOmRfMRTtd8qoX/wBEl5JfLOg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:57Z"
+    mac: ENC[AES256_GCM,data:+QZ1EBuJS9X1/EKYi6oYDn/GMmWFDsVWL0IKsMReOzBIOip12jofcUCHhtET7M9pAwYF3v+lFYLFMn1RkQ2Lt7C4E2WoXY1m0SEmJ2jCQYyAPrAiCR0ST3U5TVZ8aXEcysqAep8QXRvPoFv2Yw5vVlvTxOyrrDOzyJP4lqU3uK8=,iv:xWvCVuSzlypGWCXa9yw9zwALaIJNWT0Q6bhfH/rgt4k=,tag:1MJBOZIYDnYCPfq7lZY9mg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
+    version: 3.9.0
