--- a/kubernetes/cluster0/apps/auth/redis/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/auth/redis/app/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: auth
 type: Opaque
 stringData:
-    redis_password: ENC[AES256_GCM,data:ihmB82grpknnyvboZdD9ez/sWQJWoRjZQXcpSpFy,iv:j0Ky5WQ7dZANvyTQ8ChD15XrGcfia5zJpORC9RdAfXY=,tag:MpFAuKDrMLiXTEbcXeQxjw==,type:str]
+    redis_password: ENC[AES256_GCM,data:OlwbClV2qePkZCmESc1RA7cYMiSSi/9A5+CKYOgs,iv:UNHO4may5dwF459d1ISbo1X5cpVENXvC/pQe2i987WA=,tag:kmMTXTrBI4Dd4UbsZGmQxQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhTW9ldG9kWlZESlJDRW5C
-            dDM5cm1yTkxVVnNUYzBGVXJaV01uVTN1MWlzClh2aHI0YUk2b29nTTVjalJ6RldG
-            WDc4QWR2U2JRR25tc2tMUy9EMmxxMFkKLS0tIGgvN3h0QXhrUDBsRk5LSGRSQTB3
-            YVNoUFBOZFpyTStsc2lJenE3S005SlUKst5be6UkIHHle4DyIbJfv5BiD6qt9+J3
-            Z2X3fxHJ3iOLsAEW9elwWt2qUjJYUdgKanIGhzMcX+mzMMkWv6W3Sw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsK295RjdQWUlwb2JRTXZ3
+            V3lhRGNYck1aNy82WjRGUUNwOUhoVVhyTjJnCkduNmFydmFxL3FHUHBVY2ZJQjYx
+            Y3AydjF3aGRtT0NhZlVoUm5QdnpUbGMKLS0tIEVGazhHTkRVMWY0NGdzQ1ZyQkZ2
+            UHRaMHZValVMWDJGWkIxTmJzTkhJbEUKLM8v4vI6/UZ5V7OystC/Ga6OQ3yIz2b3
+            v9+Vt4sDdbCEzvjabAKHdUSUkcASJon3MbbnZYudPIC1KlPPvuzNMA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-28T17:57:53Z"
-    mac: ENC[AES256_GCM,data:jy0gYxJsYAa5KsyrmIwrLQDgkXxUviyHJCvS8vy3aj61XF8/9iXygnPUHG8zF0S1WeOrvwbhCMu+EJAtA5Ny951C9iJ9mdYWdp3cTEyZcHERpglM0toIQHiNA+cynrEgeGKGjzBc91tYsIfImfYC1OtDOfVPhZXwo4T7u5O637Y=,iv:uAnfUtdKz07qBGXLxWZ9PcT3R8e12xM9ejbz188gMSU=,tag:o1NIQwyrpRJckICj3O8bFA==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMdHBuVDl2N3h2ODl2TzZ2
+            c05xbUZGWHlCV3pXbFlNU0xyWk5lN1hlamlFCnpxSms5b09pS2tCSUh5cG5BZmlS
+            L2lpLyszYUJURlB1MUVEZzhKT1duV28KLS0tIEtYV3RuUmU1WFFHQ0ZSTzlrV1dI
+            UjY1MFVYL2lhZDhXMVFtOFAvY09IQ1EKGgrhaiJydgMG0Dga0XqWkK8FLijxmx3G
+            dXcKBdR+Vl052WTEOdVpk5xOBmuUErYR8PRbwyG4VoTon9htvOxX7Q==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:57Z"
+    mac: ENC[AES256_GCM,data:MPvHZ2yuLLAHkRRmfA4P3G3kzyy/vRgdd9jPNb5kLPzt50/meWs2tAuAl4PfgYluvv8/eMWy9QULYQyTzCUj7DFXRrkQBYFIhI/M1YvzhcTC0ctJUfpsY748KhPzCh8iuSY52StujuFFEMKKwu7jbNEeUkGyyV8yj3FqfwXFyvc=,iv:Ni6f94H4VZeiKe6Lhkc6TyxN1TE/8AgW5C9gQ4JL9Dk=,tag:qYEQlPBIag9jtGp9JnLaFw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.0
+    version: 3.9.0
