--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     name: cloudnative-pg-secret
     namespace: databases
 stringData:
-    POSTGRES_SUPER_USER: ENC[AES256_GCM,data:I60fxM72OMY=,iv:DrHLTp7eh4yaCwmtGfGmZShGlO+xjt2JQncITPTrbp8=,tag:jAA3epuXNSWlEt+Dx6ltfg==,type:str]
-    POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:RpJ9q9FuIk89Bg9lmoqup4veWDUfPjWGcr/22Ehc+fIFsmFr5nP7maQMBOl04k/V6mlRPNq5ndYJO4UP4x4bWQkv/f6V03hQ7oLkwJ5OGvEtrUzpUsFh0VfDYM6RDoXpwGL5n6ySPQUe7f6/qYm9ytjb79gt5K7iQqOHZHT+ml4=,iv:BdHa8vgPsavPRIUSuH/WkWby+d5f0+InQLzQwqiRpS4=,tag:mXxidfAI66Ta6KAGoW47uQ==,type:str]
+    POSTGRES_SUPER_USER: ENC[AES256_GCM,data:2+QK0FFhcE0=,iv:xLFHbKvLdbBHZr7naMIvzKhJHDlj2d7NOMZGwLlBsY4=,tag:qyA86ftBMOPPP/lHz5HUeg==,type:str]
+    POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:Bi19zdzxhfZLA6oV1Kn10kE70dKoveHLHKpeztJ57u67sabrKUz75n4+s9iMS8gyl2C2zAMd6NIVqCgG6AX3AJ7+AZF6c+yW7R9dw8vfDqP8rJa9AYh3lsx5dkphNlAXmEeFNkD88SgRFiV0LcU/OH87ZQ29i+id278QtFR9HQQ=,iv:3txAbxCnZdh7wFHeWVR52kVl0piH0Tx8dK8sg3avHxo=,tag:eSY1VN7R5PX4h+XHOLLDkQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2eE1BTkswQWMvL1BicHNa
-            VU5aZEJXeCtabkJZc0tYME9STXJ3NTIzd0Z3Ckcrb2JzMERlUTJwV3l0emJEenJj
-            bk0rcVhxOU1ycm9heDdNUS9JMVdCR3cKLS0tIDRwZ0lzZnpzQy9UQ2lJMnBVK1Q3
-            RGlDekZZMkdMbUt2QUVkaklMSmdablUK7edmMfEBULLoorgqTkqiarPJY+Vir1zS
-            UmbpUcI4Byl/RCEpM5AmtCPBAWhnhIu7+z6/JE/h8tHD/pQ9Q4SCUw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUNUNHSElPUDNWTlNSV0k3
+            UnkzdmI4VVp4L0ViU2N3aGlHUDhuYkxiNGdzClZVeXhEcjhYNnpqV2RJUFo2RWVz
+            Y2RJTDF5a1Q2L2hiNEd6WW15by9JVWMKLS0tIHVGelJ0OHdta0NHNDJCYzlaYzlF
+            UkczejZqd3Vwd0tyazhRUHI3eDdvNU0KbDfLvuqtecA0hGbKhi9hiIVrvrgIOpYt
+            tWXZST3w36KOqjR4ZMemDTl672Yd1wrfLznxnVjEhtj/4IWEgWnaug==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-02T05:50:47Z"
-    mac: ENC[AES256_GCM,data:/gs5e7tkgykF0bOSPKYwo6ExU/J1D9uu/L+kcIUTxcwCDor+LPWkZpVAUJHpuk1QJVrRj1y4/22tsrTtF3o3YCY7YRQ7zU8iSA1DH8MaexdmNp3xzh0KdACgI2t2SW69bW9Q8uhRr0YCfxvgxjSIwtP8V8k3XFzZbP5yqyU4Czo=,iv:gN9kqNELil0q9AZY29qGaPXk90xMhbMPJFYOqI7Oa78=,tag:74yKPhLYwwB0525QOQUnOA==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBua0MxT1VkM2tFcy9QaTQ3
+            YTRDT2s4L2hIdUVRNy9jaTZ0L2Z0NUxCbEFnCjJNbUFqU2RVUUtuT3oxRlF6YzIz
+            VSs4UC9FNlhBYUdDa25BSDZ4NW4wRHMKLS0tIGxPbXJhdEE2Zlh3bWxOUzhwOVhh
+            dXVvVnlvcElweFZhRFpPWWI1WHl1S3cK9qcuCsnQNOZBenoiO2vMUTZ5pc6ODvro
+            9KB61T229awIvH6shofCTItbFN+wJp07694gsVFDYc4fAbfnYqurVQ==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:58Z"
+    mac: ENC[AES256_GCM,data:ByVddDb6Cj3acw3eHEFnDAggxXkQzxOIteN0PUhraozLRgVJFv/3Thp/PZbRdVskYNCWlmPn1wRxOVPjs4WfJGQqRBYPWJnmc1+KGOyfZeJQ4JSuANkMWQ5es0w02oI+Ah12/Egbo3v8Cn6kExGmsUDtkBAdmtIZj+0UBiGEADU=,iv:pzP3xBcOz4Kfn/VGylLi+s5jO1zBcbwZmAkVtKYSJfU=,tag:cOREPRNuOz0c0lj1lHHYZQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
+    version: 3.9.0
