--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     name: immich-db
     namespace: databases
 data:
-    username: ENC[AES256_GCM,data:na2jZFUmlihgxI8u,iv:4wx4xcb/zbfDkj6naF4RoAcGNZQOIRZpdVroWME6OCU=,tag:2w15DX1r4fBYKREvrostog==,type:str]
-    password: ENC[AES256_GCM,data:G1WB8ozbyJCIc1f+g6eF2eopnIdYBeo7x8hRN+uM/Diq/kHCAy6Vcem1iefzaJ7VLO1TnPFvFUqU5frGbETNKD4lZoY=,iv:HOEYKPFx59GKci/tFZRI9B+aSmx2NLpf/GJswR0/Tho=,tag:zYidqONcmV0xRsNLOozxqQ==,type:str]
+    username: ENC[AES256_GCM,data:/QGo/0KI4d29/TTF,iv:N/D1Mcw4rJYWz4zrPJtDVb9spcNvm5RXb/DoU17nL8g=,tag:N4p1aYXPUVnZqPPP/++HxA==,type:str]
+    password: ENC[AES256_GCM,data:vfVSRyLE5ZdD4yRmE8cLU3NkrpcF7sARHyLTYl1n1JK+kaRu8gAI/fJVjUgeueFtAu2vMWe6n6wcWmLiqr42UKExHP8=,iv:+8Nl+4cdh3oA88CXdMSoX0ueKIYNlHYSmOB4/zJ1f74=,tag:DtFs5e09QU5FfFIsbhA9fA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvUS96L2pkWWJPNFFEeFlt
-            RVVXVGRubEpsL1RkREhmZHhYNmhTVTlCTmswCnN5VkZidEJVdTUwblk1WUJYM29R
-            K3JBOWQ5V3Y3dm40WmZQTnFxcE9vb2MKLS0tIDRLL2pPY1lCNkh3SnlUVGN5QTls
-            MTcxbE9MRTFDUHd5c2cvZXJhbmVBZ2cKaI333DpgiSXuQvRZXRBeX/p73M/FKNnk
-            CRGAUIC4oTEQn1IUeuf7B1dJnHJf2x/XzunVdfo2QsMNohntP/dDAA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtYndYMkZNU0x3Qk54TGZ2
+            WjhsdTBUbTcrL2txWk41cnpUZGlab2VaMWs0CmdhblJYNWdET2hkc0NYK3FhSEh5
+            TkhBYjE1QXUyNU9OY1VQc0xucVJaakUKLS0tIEJiZFhXLytITEJRU2VpMkxDMUxm
+            ZENFMndBaFVkdWY0WWJlVUlUczBiN28KzPdKQKTeRoRLveRwqw32hU5e3HcTdenA
+            GBSpq0iQRf7b++eaA7RUv6iSjzNIsLA1GArZuhll/Sc4CM4OO7uzPw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-02T06:00:42Z"
-    mac: ENC[AES256_GCM,data:l2/DZXsdNHA5cIAFtYtU++aviJtmbQ5GYFJzRGQwxHh4KykrjeevIEfyZj7ZfZ2s2RdW+/XprP6chc9VITsqIbWHb2vIS2NG1SHPitGCtgasUMIhnXPq6lhKePTYL0hyCi78TRutWXskJ/zcCW/EJmNz34rvgFSLXeBhetiRaik=,iv:xSGiW05zQg8w4huHq2hSdaC8KacLV6ym7Gj1jUMcobo=,tag:Trd5haOi/z934mW47NcaGQ==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKOTM3TWpVeDdodDgrUFhj
+            ZzBTWUhtenNTZ3R2RWoxQWxZZzlGQkhSMm1jCnp1N0tlU0Vud29wU1hrMmFQbEhK
+            UEh1U0IyL005RzQzUzVtUERnSmJkRk0KLS0tIDNkbFRBSFBRcDBFcnRWUU9MWm5H
+            VFNZRlR4cWxkVkkrOHFjeDc3N3g4a3MKc/SbT18dShpGixq/jASmrjXFnX7vtNCC
+            M2fGByFzGqM8qJeDsk717K/LMXiRh7CH+pAdPZKZ0k4eFwVtsOterA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:58Z"
+    mac: ENC[AES256_GCM,data:dS87oT81p0q648VLZwfO3ElnRXjGfl82BUo3PYnlRTQgun7prwGGx3i6hvIxO6tBcmEYfYSHKuPZ/C3u/+sp0GpbabNtPOunSHKprQWKiOMvYM+qBsFA/ZHrGDi+rfbsFG0ZuTQ2B04vG3tgzafp7XGHHzzI24LZwuPyML8IUp0=,iv:c1tC7bx5V0ie4NgLLk101BOD2fR0aDz7wpsE0BQCe30=,tag:Dit622wCZuM6EW0mO8OoQA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
+    version: 3.9.0
