--- a/kubernetes/cluster0/apps/home/immich/redis/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/home/immich/redis/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     namespace: home
 type: Opaque
 stringData:
-    redis_password: ENC[AES256_GCM,data:T+sOAxtMeefemI3qq/Qz7FSBcg6PqyIU7uRYrvO1LyG7ZZ7YzNsXY97QDbdXzGNI0ro=,iv:PN4ythrl8rA/DYbkg6HPGSZ+HXXUw8Uonqq//NIycGE=,tag:slCKqxRdrVJglf+sAiZHww==,type:str]
+    redis_password: ENC[AES256_GCM,data:tdmdIzVirCwcT1h4RY5ytyZXPDASWEUXeM1QzDouJXph6XVoKzMUgm8igCmtjQykQW8=,iv:EX461cvAInCjQtMDXnClfY7udoopEVQKwy3Jewf1lgw=,tag:BbQC43XKEzDITPIujtYSZw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,23 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkbDFISmNocVZyT2ozcDFK
-            WnFVTmtYMml0cE9RQ25BQWI5c2h3VFM4VERVCkVoVFlGZ2FEUlhNd01hdWY2MkVT
-            Y1JKODRTcFVtOG1CME82SFNGSmJESWcKLS0tICtGb2RDbENBWmJsL0RJZTBpaytK
-            QkxJRloraklFcnhrVm90K2NCTDRkOGMKlozC44soD11zvj8k+8c9IzEduL1KnI9S
-            UTyo+CSTZoHmTKbyMAz8aIwmVbxlw7UDh35E1XqFjtEprLS2tFW/oQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2OVh4UUczaGxQZk1qM0ZQ
+            QVltbTRMTXJzWUVhbkUyMEVzZjF3ZjB4aDA4Cm00R3h4cGhCZXJJWjVFZVdKSjFi
+            dktWQjM2VTVxNlE1UUJlSFpCcWRvMW8KLS0tIHdzWnNwbEdsS3Fla2xaVU9RRmVT
+            RlVjT0pJZXYvMlRIYk85S3g4R1R5dDQKEL7MXhRcl2NyRI5wjyH921FoiztrWeNn
+            gEVaHPMaS3uNuWFbYnU9c3XAxyu4Jn+qormXLkHs0dQRYzkMlUNscg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-06-04T21:58:57Z"
-    mac: ENC[AES256_GCM,data:sbDUacd7oMpce/58ZLxskZAALShabAHIP5edlLG9NBUaNLEcwVZdiYUlvP9k5jOLKDqRdO2Pz3PkQvMP99erqq8c6X7i/QHSCloj8zL97Zcbd22VgcsZcvHp49DXUv7JmZ2+D6CE1HMfT5PXmi5wyS3CVbSkNikHv72IInkYmVc=,iv:HaddAzRm8bE4IJ589lmaZx1TuDFsXYHo+n1tr7i+gy8=,tag:PeB6jAzE+Al1Kkv2ZZBQ+g==,type:str]
+        - recipient: age185kanaq3uw2gjx5enu2v69nk9ner3lamdevrfgx3wqucsl9ewa2qlt2gf7
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArZGpjTmlncVZIbTFaUzl5
+            S0hWckpobXQ3M3JTN3BhZzJuZ2l4MHJuMTJBCkh6RHV1VkptUVE2MXl3Ky9kR1lG
+            amNBanpTQnJnS0ZMN1Yza3RxZHhRd3MKLS0tIExsTERzb2J5ckdZMGNhbVpwSUo5
+            UGI1Ukl4NjVEOS9VOEFMNWhmaFdZREkKkh8Y6e59lSxviqtT4RQjCuWjkmvxAnXG
+            bkuF7bl/fVVTE91rOu9Oi6la6nyd89LHir+KCOx937r6qWLz1iZ/Gg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-08-06T19:52:58Z"
+    mac: ENC[AES256_GCM,data:TsDLOoxRrrvxAp0hS2vv8b8ZLU/TNvWY+IwnFDY4ExTQH648h1MbHZcvmqZS8QVDcgq7rPp0DNJ517046rwYcqfAtIpyrELOIMGOqkbvvIUvs+VlnHG5Tn4tElrpDjcQ/AGMsBVZ2JrE5OCrVOOHqO+NoOu10S50bcDAk9ukm4o=,iv:/LnbQDrnFOly/titAC3uvDxDEYHIlKxqpNROrUjkj0k=,tag:OKE0cG+sfOfwfrSHW4NwmQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
+    version: 3.9.0
